Fix footer on mobile

--- a/src/components/CallToAction/index.module.css
+++ b/src/components/CallToAction/index.module.css
@@ -12,11 +12,23 @@
 }
 
 .root.regular {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.root.large {
   font-size: 20px;
   line-height: 28px;
 }
 
-.root.large {
-  font-size: 28px;
-  line-height: 40px;
+@media (min-width: 321px) {
+  .root.regular {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .root.large {
+    font-size: 28px;
+    line-height: 40px;
+  }
 }
